<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_ingredients"
        android:icon="@drawable/ic_ingredients_black_24dp"
        android:title="@string/title_ingredients" />

    <item
        android:id="@+id/navigation_cart"
        android:icon="@drawable/ic_cart_black_24dp"
        android:title="@string/title_cart" />

    <item
        android:id="@+id/navigation_favorites"
        android:icon="@drawable/ic_favorites_black_24dp"
        android:title="@string/title_favorites" />

    <item
        android:id="@+id/navigation_menu"
        android:icon="@drawable/ic_menu_black_24dp"
        android:title="@string/title_menu" />

</menu>